# code-sanity

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml  install.sh  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
docs/: HOOKS_MATRIX.md  MCP.md  RELEASING.md  ROADMAP.md  SEMANTIC_V2.md  THREAT_MODEL.md
fixtures/basic-rust/: .gitignore  Cargo.toml
fixtures/basic-rust/src/: lib.rs
fixtures/mixed/: README.md  app.py  ui.ts
fuzz/: Cargo.toml  patch.dict
fuzz/corpus/fuzz_apply_patch/: anchor-mismatch.seed  create.seed  crlf.seed  delete.seed  insertion-anchor.seed  modify.seed  multi-file.seed  no-newline.seed  omitted-counts.seed
fuzz/corpus/fuzz_parse_patch/: crash-ef96b1713d0ef465b8512c689920c922ab48c8ed  crash-fc0a6a89742899b99be5bd60a15b1e07fd8bbc31  create.patch  crlf.patch  delete.patch  headers-and-two-hunks.patch  insertion-anchor.patch  modify.patch  multi-file.patch  no-newline.patch  omitted-counts.patch  sql-comment-ambiguity.patch
fuzz/fuzz_targets/: fuzz_apply_patch.rs  fuzz_parse_patch.rs
proptest-regressions/: patch.txt
src/: cli.rs  config.rs  db.rs  embed.rs  envfile.rs  fsutil.rs  index.rs  journal.rs  lib.rs  llm.rs  lock.rs  logging.rs  lsp.rs  main.rs  map.rs  mcp.rs  output.rs  patch.rs  path_projection.rs  presentation.rs  proposal.rs  redact.rs  sanitize.rs  search.rs  semantic.rs  semantic_resolver.rs  semantic_store.rs  strict.rs  transaction.rs  verify.rs
src/tui/: app.rs  change_preview.rs  components.rs  mod.rs  syntax.rs  view.rs
tests/: completions.rs  concurrency.rs  config_guard.rs  crash.rs  db_migration.rs  embed_stress.rs  incremental.rs  installer.sh  json_output.rs  llm_embed.rs  path_projection.rs  path_safety.rs  permissions.rs  proptest_roundtrip.rs  protected_leak.rs  read_paths.rs  roundtrip.rs  semantic_v2.rs  tui_cli.rs
