[package]
name = "code-sanity"
version = "0.4.5"
edition = "2024"
rust-version = "1.85"
description = "Sanitized mirror and patch bridge for agent code workflows"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gfhfyjbr/code-sanity"
keywords = ["sanitizer", "mcp", "agents", "privacy", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
aho-corasick = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dotenvy = "0.15"
globset = "0.4"
ignore = "0.4"
indicatif = "0.18"
libc = "0.2"
log = { version = "0.4", features = ["std"] }
ratatui = "0.29"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
similar = "2"
tree-sitter = "0.26"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-objc = "3"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
toml = "0.8"
ureq = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
proptest = "1"
tempfile = "3"

[features]
# Exposes patch::fuzz_api for the fuzz/ crate; never enabled in normal builds.
fuzzing = []

# Keep the nightly-only fuzz crate out of stable `cargo test` / clippy runs.
[workspace]
exclude = ["fuzz"]

[profile.release]
lto = "thin"
strip = true
